got mvp now working on stretches

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -92,9 +92,10 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="https://msquared88.github.io/responsive-Design-Great-Idea/" class="image fit"><img src="images/Great-Idea.JPG" alt="" /></a>
 										<header>
-											<h3>Rhoncus Semper</h3>
+											<h3>Great Idea</h3>
+											<p>This is a project that showcases the power of media queries for designing a mobile responsive page</p>
 										</header>
 									</article>
 								</div>
