ready for deployment

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -41,11 +41,11 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
 							<li><a href="https://github.com/MSquared88" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
+							<li><a href="matthew.meeves@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -61,7 +61,7 @@
 
 							<header>
 								<h2 class="alt">Hi! I'm <strong>Matthew Meeves</strong>,
-								<p>I am a new developer and am currently in <a href="https://lambdaschool.com/">lambda school.</a> <br>This is my first Portfolio.</p>
+								<p>I am a developer and am currently a student in  <a href="https://lambdaschool.com/">lambda school.</a> <br>This is my first Portfolio.</p>
 								
 							</header>
 
