--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -101,12 +101,15 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="https://msquared88.github.io/Sprint-Challenge--User-Interface/" class="image fit"><img src="images/sprint-challenge1.JPG" alt="" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
+											<h3>Lambda Sprint Challenge</h3>
+											<p>This was my first sprint challenge at Lambda School. <br>
+											It is a multipage show case of semantic HTML and uses flex box to style the grids.
+											</p>
 										</header>
 									</article>
-									<article class="item">
+									<article class="item noShow">
 										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
 											<h3>Natoque Vitae</h3>
@@ -114,13 +117,13 @@
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
-									<article class="item">
+									<article class="item noShow">
 										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<header>
 											<h3>Dolor Penatibus</h3>
 										</header>
 									</article>
-									<article class="item">
+									<article class="item noShow">
 										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 										<header>
 											<h3>Orci Convallis</h3>
