--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
 							<li><a href="https://github.com/MSquared88" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
-							<li><a href="matthew.meeves@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="mailto: matthew.meeves@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
