--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/texas-star.jpg" alt="" /></span>
+							<span class="image avatar48"><img src="images/IMG_0686.JPG" alt="" /></span>
 							<h1 id="title">Matthew Meeves</h1>
 							<p>Software Developer</p>
 						</div>
