--- a/index.html
+++ b/index.html
@@ -105,18 +105,21 @@
 										<header>
 											<h3>Lambda Sprint Challenge</h3>
 											<p>This was my first sprint challenge at Lambda School. <br>
-											It is a multipage show case of semantic HTML and uses flex box to style the grids.
+											It is a multipage show case of semantic HTML and uses flex box.
 											</p>
 										</header>
 									</article>
 									<article class="item noShow">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="https://keen-minsky-506dba.netlify.com/" class="image fit"><img src="images/sleep-tracker.JPG" alt="" /></a>
 										<header>
-											<h3>Natoque Vitae</h3>
+											<h3>Sleep Tracker</h3>
+											<p>This was my first build week project. It was a culmination of what I had learned up to this point in my learning.</p>
+											<a href="https://github.com/MSquared88/UI2" class="icon brands fa-github"><span class="label">Github</span></a>
+
 										</header>
 									</article>
 								</div>
-								<div class="col-4 col-12-mobile">
+								<!-- <div class="col-4 col-12-mobile">
 									<article class="item noShow">
 										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<header>
@@ -129,7 +132,7 @@
 											<h3>Orci Convallis</h3>
 										</header>
 									</article>
-								</div>
+								</div> -->
 							</div>
 
 						</div>
@@ -142,21 +145,16 @@
 							<header>
 								<h2>About Me</h2>
 							</header>
+<!-- 
+							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a> -->
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
-
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>After 6 and a half years of progressing through the ranks of a oil and gas field automation company I was made the head QA/QC engineer and had a lot of success including training two other engineers. After six months I felt that I had gone as far as I would go in that company and was not ready to stop learning and progressing in my career. I have always had an interest in the technology field and knew that was the direction I wanted to go. I found out about Lambda School and the opportunity that they offered. I am excited to continue to learn and realize my goal of becoming a Web Developer..</p>
 
 						</div>
 					</section>
 
 				<!-- Contact -->
-					<section id="contact" class="four">
+					<!-- <section id="contact" class="four">
 						<div class="container">
 
 							<header>
@@ -182,7 +180,7 @@
 							</form>
 
 						</div>
-					</section>
+					</section> -->
 
 			</div>
 
