added two more projects

--- a/index.html
+++ b/index.html
@@ -119,20 +119,20 @@
 										</header>
 									</article>
 								</div>
-								<!-- <div class="col-4 col-12-mobile">
+								<div class="col-4 col-12-mobile">
 									<article class="item noShow">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="https://react-github-user-card.weatherguy75.now.sh/" class="image fit"><img src="images/github-user-cards.JPG" alt="" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
+											<h3>This is a react github user search app.</h3>
 										</header>
 									</article>
 									<article class="item noShow">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+										<a href="https://sprint-challenge-single-page-apps.weatherguy75.now.sh/" class="image fit"><img src="images/rick&morty.JPG" alt="" /></a>
 										<header>
-											<h3>Orci Convallis</h3>
+											<h3>This uses the Rick and Morty to display cards. This was my first project using react router.</h3>
 										</header>
 									</article>
-								</div> -->
+								</div>
 							</div>
 
 						</div>
