added github links

--- a/index.html
+++ b/index.html
@@ -123,13 +123,17 @@
 									<article class="item noShow">
 										<a href="https://react-github-user-card.weatherguy75.now.sh/" class="image fit"><img src="images/github-user-cards.JPG" alt="" /></a>
 										<header>
-											<h3>This is a react github user search app.</h3>
+											<h3>react-github-user-card</h3>
+											<p>This is a react github user search app.</p>
+											<a href="https://github.com/MSquared88/React-Github-User-Card" class="icon brands fa-github"><span class="label">Github</span></a>
 										</header>
 									</article>
 									<article class="item noShow">
 										<a href="https://sprint-challenge-single-page-apps.weatherguy75.now.sh/" class="image fit"><img src="images/rick&morty.JPG" alt="" /></a>
 										<header>
-											<h3>This uses the Rick and Morty to display cards. This was my first project using react router.</h3>
+											<h3>Rick and Morty Cards</h3>
+											<p>This uses the Rick and Morty to display cards. This was my first project using react router.</p>
+											<a href="https://github.com/MSquared88/Sprint-Challenge-Single-Page-Apps" class="icon brands fa-github"><span class="label">Github</span></a>
 										</header>
 									</article>
 								</div>
